<resources>
    <string name="app_name">MagtonicMobileReportApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_others">Others</string>
    <string name="nav_greeting">Hi, %s</string>
    <string name="action_settings">Settings</string>
    <string name="toast_network_error">Network error</string>
    <string name="toast_server_error">Server error</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="first_company_name">Magtonic</string>
    <string name="first_app_title">Mobile Report System</string>
    <string name="exit_app_title">Exit</string>
    <string name="exit_app_msg">Exit from this app?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="loadingTitle2">Mobile Report System</string>
    <string name="staffinfo_staff_num">EMP No:</string>string>
    <string name="prompt_password">Password</string>
    <string name="login_account_empty">Account cannot be empty</string>
    <string name="login_password_empty">Password cannot be empty</string>
    <string name="logout_title">Log out</string>
    <string name="logout_title_msg">Log out from this account</string>
    <string name="ok">Ok</string>
    <string name="login_fail">No Authority!</string>
</resources>
