<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:id="@+id/headerMenuList">
        <!--item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_gallery"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_slideshow"/>
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_tools"/-->
    </group>

    <item android:title="@string/nav_others" android:id="@+id/submenu">
        <menu>
            <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/baseline_settings_black_48"
                    android:title="@string/nav_setting"/>
            <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_exit_to_app_black_48"
                    android:title="@string/nav_logout"
                    android:visible="false"/>
            <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/baseline_touch_app_black_48"
                    android:title="@string/nav_login"
                    android:visible="true"/>
        </menu>
    </item>

</menu>
