<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="?attr/actionBarSize"
                android:id="@+id/login_container">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/linearLayoutLogin">

        <ImageView
                android:id="@+id/appCompatImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:src="@drawable/magtoniclogo"
                android:contentDescription="@string/app_name"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

            <TextView
                    android:id="@+id/first_load_textView_title2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/loadingTitle2"
                    android:textColor="@color/font_color_gray"
                    android:textSize="20sp"
                    android:textStyle="bold" />




            <EditText
                    android:id="@+id/editTextAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/staffinfo_staff_num"
                    android:inputType="number"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textSize="20sp"
            />
            <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textSize="20sp"
            />


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="@android:color/holo_blue_light"
                    android:visibility="invisible"/>




            <Button
                    android:id="@+id/btnLogin"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/nav_login"
                    android:textStyle="bold"
                    android:background="@drawable/button_corner_blue"
                    android:layout_gravity="center|bottom"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
            />





        </LinearLayout>


    </LinearLayout>



</RelativeLayout>

